# fly-in-school-42

./: README.md
src/: Manager.py
src/model/graph/: Graph.py
src/solver/pathfinder/: pathfinder.py
src/solver/planner/: priorityplanner.py
src/validator/: __init__.py
v1-hop_based/app/static/styles/: style.css
v2-capacity_heuristic/: .gitignore
v2-capacity_heuristic/src/solver/structures/: constraints.py
v2-capacity_heuristic_low_traffic/src/solver/structures/: roadmap_entitites.py
v3-capacity_heuristic_high_traffic/: server.py
v3-capacity_heuristic_high_traffic/app/static/js/: main.js
v3-capacity_heuristic_high_traffic/src/error_handlers/: error_handlers.py
v3-capacity_heuristic_high_traffic/src/model/graph/: Graph.py
v3-capacity_heuristic_high_traffic/src/solver/pathfinder/: pathfinder.py
v4-cbs/src/solver/pathfinder/: pathfinder.py
v4-cbs/src/solver/planner/: cbsplanner.py
v4-dijkstra/src/: Manager.py
v4-dijkstra/src/embedded/: graph_layout.py  libgraph.c
v5-cbs/app/static/: index.html
v5-cbs/src/: Manager.py
v5-cbs/src/validator/: validator.py
v5-cbs_hop_based/src/embedded/: libgraph.h
v6-cbs_capacities/: main.py  pyproject.toml
v6-cbs_capacities/src/config_parser/: Parser.py
v6-cbs_capacities/src/solver/pathfinder/: heuristics.py  pathfinder.py
v6-cbs_capacities/src/solver/planner/: cbsplanner.py
v6-cbs_capacities/src/solver/structures/: ConflictNode.py  constraints.py
v6-cbs_hop_based/: Makefile
v6-cbs_hop_based/src/: Manager.py  __init__.py
v6-cbs_hop_based/src/error_handlers/: __init__.py
(+29 files in other folders)
