[tool.poetry]
[project]
name = "fly-in"
version = "0.1.0"
description = "fly-in drones"
authors = [{name = "@ecarabal"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
package-mode = false

dependencies = [
    "requests",
    "pydantic",
    "fastapi (>=0.110.0)",
    "uvicorn (>=0.29.0)",
    "psutil"
]

[dependency-groups]
test = [
"pytest (>=8.0.0,<9.0.0)"
]
lint = [
    "mypy", "flake8"
]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"